deploy: c2429f0193e56189deac189e6d4084a51f8a2cbc

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -302,8 +302,8 @@ document.write(`
 <li><a href="jaxprop/coolprop/fluid_properties.html">jaxprop.coolprop.fluid_properties</a></li>
 <li><a href="jaxprop/coolprop/jax_wrapper.html">jaxprop.coolprop.jax_wrapper</a></li>
 <li><a href="jaxprop/graphics.html">jaxprop.graphics</a></li>
-<li><a href="jaxprop/helpers_coolprop.html">jaxprop.helpers_coolprop</a></li>
 <li><a href="jaxprop/helpers_jax.html">jaxprop.helpers_jax</a></li>
+<li><a href="jaxprop/helpers_props.html">jaxprop.helpers_props</a></li>
 <li><a href="jaxprop/math.html">jaxprop.math</a></li>
 <li><a href="jaxprop/perfect_gas/perfect_gas.html">jaxprop.perfect_gas.perfect_gas</a></li>
 <li><a href="jaxprop/utils.html">jaxprop.utils</a></li>
