--- a/_modules/jaxprop/coolprop/fluid_properties.html
+++ b/_modules/jaxprop/coolprop/fluid_properties.html
@@ -304,7 +304,7 @@ document.write(`
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">.</span><span class="w"> </span><span class="kn">import</span> <span class="n">core_calculations</span> <span class="k">as</span> <span class="n">core</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">..helpers_coolprop</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">..helpers_props</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
     <span class="n">FluidState</span><span class="p">,</span>
     <span class="n">INPUT_TYPE_MAP</span><span class="p">,</span>
     <span class="c1"># MEANLINE_PROPERTIES,</span>
