--- a/_modules/jaxprop/perfect_gas/perfect_gas.html
+++ b/_modules/jaxprop/perfect_gas/perfect_gas.html
@@ -298,7 +298,7 @@ document.write(`
 <span class="kn">import</span><span class="w"> </span><span class="nn">equinox</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">eqx</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">..coolprop</span><span class="w"> </span><span class="kn">import</span> <span class="n">Fluid</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">..</span><span class="w"> </span><span class="kn">import</span> <span class="n">helpers_coolprop</span> <span class="k">as</span> <span class="n">jxp</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">..</span><span class="w"> </span><span class="kn">import</span> <span class="n">helpers_props</span> <span class="k">as</span> <span class="n">jxp</span>
 
 <span class="c1"># ----------------------------------------------------------------------------- #</span>
 <span class="c1"># Constant generation and Sutherland estimation</span>
