deploy: da91091d11668af03a5030e2b136ca2887070df5

--- a/genindex.html
+++ b/genindex.html
@@ -351,18 +351,14 @@ document.write(`
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.backend">backend (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.backend">backend (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 
       <ul>
         <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.backend">(jaxprop.coolprop.jax_wrapper.FluidJAX attribute)</a>
 </li>
       </ul></li>
-      <li><a href="source/api/jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.html#jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.bicubic_interpolant">bicubic_interpolant() (in module jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolant_property.html#jaxprop.bicubic.bicubic_interpolant_property.bicubic_interpolant_property">bicubic_interpolant_property() (in module jaxprop.bicubic.bicubic_interpolant_property)</a>
-</li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.blend_properties">blend_properties() (in module jaxprop.coolprop.core_calculations)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#jaxprop.coolprop.fluid_properties.build_alias_map">build_alias_map() (in module jaxprop.coolprop.fluid_properties)</a>
@@ -391,6 +387,8 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.calculate_properties_rhop">calculate_properties_rhop() (in module jaxprop.perfect_gas.perfect_gas)</a>
 </li>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.calculate_props">calculate_props() (in module jaxprop.bicubic.bicubic_interpolation)</a>
+</li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.calculate_subcooling">calculate_subcooling() (in module jaxprop.coolprop.core_calculations)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.calculate_superheating">calculate_superheating() (in module jaxprop.coolprop.core_calculations)</a>
@@ -409,9 +407,7 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.compressibility_factor">compressibility_factor (jaxprop.helpers_props.FluidState attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.html#jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.compute_bicubic_coefficients_of_ij">compute_bicubic_coefficients_of_ij() (in module jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1)</a>
-</li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.compute_coefficients">compute_coefficients() (in module jaxprop.bicubic.generate_tables)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.compute_coefficients">compute_coefficients() (in module jaxprop.bicubic.bicubic_interpolation)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.core_calculations.html#jaxprop.coolprop.core_calculations.compute_dsdp_q">compute_dsdp_q() (in module jaxprop.coolprop.core_calculations)</a>
 </li>
@@ -513,7 +509,7 @@ document.write(`
         <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.fluid">(jaxprop.coolprop.jax_wrapper.FluidJAX attribute)</a>
 </li>
       </ul></li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.fluid_name">fluid_name (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.fluid_name">fluid_name (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 
       <ul>
         <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.fluid_name">(jaxprop.helpers_props.FluidState attribute)</a>
@@ -523,7 +519,7 @@ document.write(`
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic">FluidBicubic (class in jaxprop.bicubic.generate_tables)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic">FluidBicubic (class in jaxprop.bicubic.bicubic_interpolation)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX">FluidJAX (class in jaxprop.coolprop.jax_wrapper)</a>
 </li>
@@ -551,7 +547,7 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.components.nozzle_model_core.html#jaxprop.components.nozzle_model_core.get_heat_transfer_coefficient">get_heat_transfer_coefficient() (in module jaxprop.components.nozzle_model_core)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.get_props">get_props() (jaxprop.bicubic.generate_tables.FluidBicubic method)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.get_props">get_props() (jaxprop.bicubic.bicubic_interpolation.FluidBicubic method)</a>
 
       <ul>
         <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.get_props">(jaxprop.coolprop.jax_wrapper.FluidJAX method)</a>
@@ -587,9 +583,9 @@ document.write(`
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.h_max">h_max (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.h_max">h_max (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.h_min">h_min (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.h_min">h_min (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -603,7 +599,7 @@ document.write(`
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.identifier">identifier (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.identifier">identifier (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 
       <ul>
         <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.identifier">(jaxprop.helpers_props.FluidState attribute)</a>
@@ -615,11 +611,9 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.helpers_props.html#jaxprop.helpers_props.FluidState.internal_energy">internal_energy (jaxprop.helpers_props.FluidState attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.interpolate_bicubic_hp">interpolate_bicubic_hp() (in module jaxprop.bicubic.generate_tables)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.interpolate_bicubic_hp">interpolate_bicubic_hp() (in module jaxprop.bicubic.bicubic_interpolation)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.html#jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.inverse_interpolant_scalar_DP">inverse_interpolant_scalar_DP() (in module jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1)</a>
-</li>
-      <li><a href="source/api/jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.html#jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.inverse_interpolant_scalar_hD">inverse_interpolant_scalar_hD() (in module jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.interpolate_bicubic_xy">interpolate_bicubic_xy() (in module jaxprop.bicubic.bicubic_interpolation)</a>
 </li>
       <li><a href="source/api/jaxprop.math.html#jaxprop.math.is_even">is_even() (in module jaxprop.math)</a>
 </li>
@@ -678,24 +672,10 @@ document.write(`
 </li>
       </ul></li>
       <li>
-    jaxprop.bicubic.bicubic_interpolant_property
+    jaxprop.bicubic.bicubic_interpolation
 
       <ul>
-        <li><a href="source/api/jaxprop.bicubic.bicubic_interpolant_property.html#module-jaxprop.bicubic.bicubic_interpolant_property">module</a>
-</li>
-      </ul></li>
-      <li>
-    jaxprop.bicubic.generate_tables
-
-      <ul>
-        <li><a href="source/api/jaxprop.bicubic.generate_tables.html#module-jaxprop.bicubic.generate_tables">module</a>
-</li>
-      </ul></li>
-      <li>
-    jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1
-
-      <ul>
-        <li><a href="source/api/jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.html#module-jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1">module</a>
+        <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#module-jaxprop.bicubic.bicubic_interpolation">module</a>
 </li>
       </ul></li>
       <li>
@@ -733,8 +713,6 @@ document.write(`
         <li><a href="source/api/jaxprop.coolprop.core_calculations.html#module-jaxprop.coolprop.core_calculations">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     jaxprop.coolprop.fluid_properties
 
@@ -742,6 +720,8 @@ document.write(`
         <li><a href="source/api/jaxprop.coolprop.fluid_properties.html#module-jaxprop.coolprop.fluid_properties">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     jaxprop.coolprop.jax_wrapper
 
@@ -852,11 +832,7 @@ document.write(`
 </li>
         <li><a href="source/api/jaxprop.bicubic.html#module-jaxprop.bicubic">jaxprop.bicubic</a>
 </li>
-        <li><a href="source/api/jaxprop.bicubic.bicubic_interpolant_property.html#module-jaxprop.bicubic.bicubic_interpolant_property">jaxprop.bicubic.bicubic_interpolant_property</a>
-</li>
-        <li><a href="source/api/jaxprop.bicubic.generate_tables.html#module-jaxprop.bicubic.generate_tables">jaxprop.bicubic.generate_tables</a>
-</li>
-        <li><a href="source/api/jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1.html#module-jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1">jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1</a>
+        <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#module-jaxprop.bicubic.bicubic_interpolation">jaxprop.bicubic.bicubic_interpolation</a>
 </li>
         <li><a href="source/api/jaxprop.components.html#module-jaxprop.components">jaxprop.components</a>
 </li>
@@ -897,9 +873,9 @@ document.write(`
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.N_h">N_h (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.N_h">N_h (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.N_p">N_p (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.N_p">N_p (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.coolprop.jax_wrapper.html#jaxprop.coolprop.jax_wrapper.FluidJAX.name">name (jaxprop.coolprop.jax_wrapper.FluidJAX attribute)</a>
 </li>
@@ -923,9 +899,9 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.NozzleParams.p0_in">p0_in (jaxprop.components.nozzle_model_solver.NozzleParams attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.p_max">p_max (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.p_max">p_max (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.p_min">p_min (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.p_min">p_min (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.perfect_gas.perfect_gas.html#jaxprop.perfect_gas.perfect_gas.PerfectGasConstants.P_ref">P_ref (jaxprop.perfect_gas.perfect_gas.PerfectGasConstants attribute)</a>
 </li>
@@ -1065,11 +1041,11 @@ document.write(`
 </li>
       <li><a href="source/api/jaxprop.components.nozzle_model_solver.html#jaxprop.components.nozzle_model_solver.NozzleParams.T_wall">T_wall (jaxprop.components.nozzle_model_solver.NozzleParams attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.table">table (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.table">table (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.table_dir">table_dir (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.table_dir">table_dir (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
-      <li><a href="source/api/jaxprop.bicubic.generate_tables.html#jaxprop.bicubic.generate_tables.FluidBicubic.table_name">table_name (jaxprop.bicubic.generate_tables.FluidBicubic attribute)</a>
+      <li><a href="source/api/jaxprop.bicubic.bicubic_interpolation.html#jaxprop.bicubic.bicubic_interpolation.FluidBicubic.table_name">table_name (jaxprop.bicubic.bicubic_interpolation.FluidBicubic attribute)</a>
 </li>
       <li><a href="source/api/jaxprop.math.html#jaxprop.math.tand">tand() (in module jaxprop.math)</a>
 </li>
