--- a/_modules/index.html
+++ b/_modules/index.html
@@ -293,9 +293,7 @@ document.write(`
                 <article class="bd-article">
                   
   <h1>All modules for which code is available</h1>
-<ul><li><a href="jaxprop/bicubic/bicubic_interpolant_property.html">jaxprop.bicubic.bicubic_interpolant_property</a></li>
-<li><a href="jaxprop/bicubic/generate_tables.html">jaxprop.bicubic.generate_tables</a></li>
-<li><a href="jaxprop/bicubic/jax_bicubic_HEOS_interpolation_1.html">jaxprop.bicubic.jax_bicubic_HEOS_interpolation_1</a></li>
+<ul><li><a href="jaxprop/bicubic/bicubic_interpolation.html">jaxprop.bicubic.bicubic_interpolation</a></li>
 <li><a href="jaxprop/components/nozzle_model_core.html">jaxprop.components.nozzle_model_core</a></li>
 <li><a href="jaxprop/components/nozzle_model_solver.html">jaxprop.components.nozzle_model_solver</a></li>
 <li><a href="jaxprop/coolprop/core_calculations.html">jaxprop.coolprop.core_calculations</a></li>
